# reporting_agent

./: README.md  app.py  main.py  pyproject.toml
agent/: llm.py  loop.py  system_prompt.py  tools.py
frontend/: ReportingDashboard.jsx  index.html  main.jsx  package-lock.json  package.json  vite.config.js
scripts/: index_schema.py
services/: db.py  memory.py
